--- a/View/View.csproj
+++ b/View/View.csproj
@@ -38,6 +38,9 @@
     <Reference Include="DevExpress.Utils.v19.1, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraBars.v19.1, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraEditors.v19.1, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraGrid.v19.1, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
+    <Reference Include="DevExpress.XtraLayout.v19.1, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="DevExpress.XtraPrinting.v19.1, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -56,6 +59,12 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmContactList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmContactList.Designer.cs">
+      <DependentUpon>frmContactList.cs</DependentUpon>
     </Compile>
     <Compile Include="frmCreateInvoice.cs">
       <SubType>Form</SubType>
@@ -89,6 +98,9 @@
     <Compile Include="XtraForm2.Designer.cs">
       <DependentUpon>XtraForm2.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="frmContactList.resx">
+      <DependentUpon>frmContactList.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmCreateInvoice.resx">
       <DependentUpon>frmCreateInvoice.cs</DependentUpon>
     </EmbeddedResource>
