Done Customer module - Add - Edit - Archive - Logs

--- a/View/App.config
+++ b/View/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
   <connectionStrings>
-    <add name="ConStr" connectionString="server=.\sqlexpress1;database=dbAusAuto;user id=sa;password=p@ssw0rd;persist security info=false;enlist=false; pooling=false;max pool size=100;connect timeout=60" providerName="System.Data.SqlClient"/>
+    <add name="ConStr" connectionString="server=.\sqlexpress;database=dbAusAuto;user id=sa;password=p@ssw0rd;persist security info=false;enlist=false; pooling=false;max pool size=100;connect timeout=60" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
