--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="CustomerInvoice.cs" />
+    <Compile Include="InvoiceItems.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserAccount.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
